konst/tests/misc_tests/destructure_ui_tests/omit_field_array_err.rs
type Array = [String; 4];

const fn to_bar(foo: Array) -> String {
    konst::destructure!{[bar] = foo}
    bar
}

fn main(){}